Set default source level to 11, update maven plugins to use 17 when neeed, do not use unavailable toList method in OSSLCodesigner.